# Adaptive-PDE-Options-Pricer

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: BlackScholes.hpp  Grid.hpp  Option.hpp  PDESolver.cpp  PDESolver.hpp
src/: AdaptiveGrid.cpp  BlackScholes.cpp  Grid.cpp  Option.cpp  PDESolver.cpp  main.cpp
tests/: CMakeLists.txt  test_american.cpp  test_edge_cases.cpp  test_european.cpp  test_grid.cpp
validation/: validate_bs.py
